--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "numpy>=2.3.2",
     "pandas>=2.3.2",
     "playwright>=1.55.0",
+    "psutil>=7.0.0",
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
